# lvgl_test

./: CMakeLists.txt  README.md  lv_conf.h
src/: main.c
